namespace/media/wizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      runtimeClassName: youki
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5690
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /data/database
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wizarr-config
