namespace/media/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media
spec:
  selector:
    app: wizarr
  ports:
    - port: 5690
      targetPort: 5690
      protocol: TCP
      name: wizarr
  type: ClusterIP
